tests/corpus/snapshots/_cargo_toml/hex__default.snap
---
source: src/tests/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[package.metadata.cddl-codegen]
generated-with = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = "2.4.0"
hex = "0.4.3"
