tests/corpus/snapshots/_cargo_toml/hex__json.snap
---
source: src/tests/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[package.metadata.cddl-codegen]
generated-with = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = { git = "https://github.com/dcSpark/cbor_event", rev = "28514916e97240e1d2b01ba8f804d45c221fbdcd" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.57", default-features = false, features = ["alloc", "float_roundtrip"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive"] }
hex = { package = "const-hex", version = "1.19.1", default-features = false, features = ["alloc", "core-error"] }

[features]
default = ["std"]
# cddl-codegen: co-owned key. Entries you add here survive regeneration; forwards to
# cddl-codegen: dependencies that are no longer declared are pruned; the tool re-asserts
# cddl-codegen: its computed forwards each run. See output_format.mdx, "The `std` feature".
std = ["serde/std", "serde_json/std", "schemars/std", "hex/std"]
wasm = []
