tests/corpus/snapshots/_cargo_toml/hex__preserve.snap
---
source: src/tests/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[package.metadata.cddl-codegen]
generated-with = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = { git = "https://github.com/dcSpark/cbor_event", rev = "28514916e97240e1d2b01ba8f804d45c221fbdcd" }
hashlink = "0.12.1"
derivative = { version = "2.2.0", features = ["use_core"] }
hex = { package = "const-hex", version = "1.19.1", default-features = false, features = ["alloc", "core-error"] }

[features]
default = ["std"]
# cddl-codegen: co-owned key. Entries you add here survive regeneration; forwards to
# cddl-codegen: dependencies that are no longer declared are pruned; the tool re-asserts
# cddl-codegen: its computed forwards each run. See output_format.mdx, "The `std` feature".
std = ["hex/std"]
wasm = []
